cabal-version:      2.2
name:               superkey
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         georgefsthomas@gmail.com
author:             George Thomas
category:           System
extra-source-files: CHANGELOG.md

executable superkey
    main-is:
        Main.hs
    hs-source-dirs:
        src
    default-language: Haskell2010
    default-extensions:
        LambdaCase
        OverloadedStrings
    ghc-options:
        -threaded
        -Wall
    build-depends:
        base ^>= 4.14,
        async ^>= 2.2.2,
        bytestring ^>= 0.10.10,
        directory ^>= 1.3.6,
        evdev ^>= 2.0.0,
        evdev-streamly ^>= 0.0.1,
        extra ^>= 1.7.7,
        filepath ^>= 1.4.2,
        monad-extras ^>= 0.6.0,
        monad-loops ^>= 0.4.3,
        process ^>= 1.6.9,
        streaming ^>= 0.2.3,
        streamly ^>= 0.7.2,
        unix ^>= 2.7.2,
